//
//  Created by Jesse Squires
//  https://www.jessesquires.com
//
//
//  Documentation
//  https://jessesquires.github.io/JSQDataSourcesKit
//
//
//  GitHub
//  https://github.com/jessesquires/JSQDataSourcesKit
//
//
//  License
//  Copyright © 2015-present Jesse Squires
//  Released under an MIT license: https://opensource.org/licenses/MIT
// 

import Foundation

enum Identifiers: String {
    case mainTableView

    case staticTableView
    case staticCollectionView

    case fetchedResultsTableView
    case fetchedResultsCollectionView

    case mixedCollectionView
}
